# codex-provider-hub

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: perf-optimization-checklist.md
src/: App.tsx  app-types.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  lib.rs  main.rs
src/components/: AppUpdateDialog.tsx  BackupManagerSection.tsx  RecoveryDialog.tsx  SessionExplorer.tsx
src/hooks/: useAppUpdater.ts
