[package]
name = "codex-provider-hub"
version = "0.1.0"
description = "Repair Codex session visibility across providers"
authors = ["Codex Provider Hub"]
edition = "2021"
default-run = "codex-provider-hub"

[lib]
name = "codex_provider_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
sha2 = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
